--- a/styles/CartSidebar.module.css
+++ b/styles/CartSidebar.module.css
@@ -166,8 +166,6 @@
   opacity: 0.5;
   cursor: not-allowed;
 }
-@media (max-width: 768px) {
-  .desktop {
-    display: none;
-  }
+.hidden {
+  display: none;
 }
